# schools-api

./: .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
deploy/docker/: pgadmin.example.env  postgres.example.env
school/: schema.yml
school/config/: server.conf
school/school/: settings.py  urls.py
school/school_modules/: apps.py
school/school_modules/classes/: models.py  serilaizers.py  urls.py  views.py
school/school_modules/classes/migrations/: 0001_initial.py
school/school_modules/core/: exceptions.py
school/school_modules/core/serializers/: mixins.py
school/school_modules/core/views/: mixins.py
school/school_modules/pupils/: models.py  serializers.py  urls.py  views.py
school/school_modules/pupils/migrations/: 0001_initial.py
school/school_modules/schools/: models.py  serilaizers.py  urls.py  views.py
school/school_modules/schools/migrations/: 0001_initial.py
school/school_modules/workers/: models.py  serilaizers.py  tests.py  urls.py  views.py
school/school_modules/workers/migrations/: 0001_initial.py
scripts/: entrypoint.sh
