[tool.poetry]
name = "schools-api"
version = "0.1.0"
description = ""
authors = ["Danil Romanov <danil.romanov@red-soft.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.13"
django = "^5.1.7"
djangorestframework = "^3.15.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
